// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Freelancer rendering and matching the snapshot 1`] = `
<button
  class="primary-btn in-dark w-button mr-auto mt-6"
  data-testid="get-started-button"
>
  Get Started!
</button>
`;

exports[`test freelancer onclick next snapshot matching 1`] = `
<button
  class="primary-btn in-dark w-button mr-auto mt-6"
  data-testid="get-started-button"
>
  Get Started!
</button>
`;

exports[`test freelancer onclick next snapshot matching 2`] = `
<h2
  class="text-theme-secondary"
  data-testid="heading"
>
  A few quick questions: first, have you freelanced before?
</h2>
`;

exports[`test freelancer validation failure not proceeding the next step 1`] = `
<h2
  class="text-theme-secondary"
  data-testid="heading"
>
  A few quick questions: Have you freelanced before?
</h2>
`;

exports[`test freelancer validation passing if the value is being entered  1`] = `
<h2
  class="text-theme-secondary"
  data-testid="heading"
>
  Great, so what’s your biggest goal for freelancing?
</h2>
`;
